# msw-translation

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PRD.md  README.md  bbox_visualizer.py  block_merger.py  color_sampler.py  community_glossary.py  config_manager.py  glossary_service.py  hotkey_listener.py  language_descriptor.py  main.py  ocr_model.py  pyproject.toml  settings_ui.py  text_normalizer.py  tracking_utils.py  translate_apple.swift  translate_windows.cs  translate_windows.csproj  translation_pipeline.py  translator.py  translator.spec  translator_engine.py  update_checker.py  version.py
.github/workflows/: ci.yml  release.yml
capture/: __init__.py  base.py  cross.py  mac.py  window_finder.py
doc/: adding_engine.md  adding_platform.md  architecture.md  distribution.md  glossary.md
ocr/: __init__.py  base.py  mac.py  tesseract.py  windows.py
tests/: test_block_merger.py  test_community_glossary.py  test_config_manager.py  test_glossary_service.py  test_language_descriptor.py  test_lru_cache.py  test_ocr_model.py  test_text_normalizer.py  test_tracking_utils.py  test_translation_pipeline.py  test_update_checker.py
